<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.administrator.myapplication.Activities.LoginRegister.RegisterActivity"
    tools:showIn="@layout/activity_register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/back"
            android:text="@string/back"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:textColor="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/enterPhone"
            android:text="@string/enterPhone"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:src="@drawable/line"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/phone"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:layout_margin="5dp"
                android:text="@string/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:src="@drawable/line2"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/phoneNumber"
                android:layout_marginLeft="15sp"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/enterNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <ImageView
            android:src="@drawable/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/emailRegister"
            android:layout_margin="10dp"
            android:textSize="15dp"
            android:textColor="@color/buttonRegister"
            android:text="@string/registerByemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/button"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@color/buttonRegister"
            android:textColor="@color/white"
            android:layout_width="206dp"
            android:layout_height="38dp"
            android:text="@string/register"
            />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
