<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.administrator.myapplication.Activities.LoginRegister.FindPwActivity"
    tools:showIn="@layout/activity_find_pw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gruy"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/findPWback"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/left"
            android:src="@drawable/left"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
       <TextView
            android:id="@+id/back"
            android:text="@string/back"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@+id/left"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
       <TextView
           android:id="@+id/findPW"
           android:text="@string/findPW"
           android:textColor="@color/white"
           android:layout_centerHorizontal="true"
           android:textSize="20dp"
           android:layout_margin="5dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/Byphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="20dp">
        <ImageView
            android:id="@+id/phonePic"
            android:src="@drawable/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/phone"
            android:text="@string/findPWbyPhone"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/phonePic"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:id="@+id/phoneIntroduce"
            android:text="@string/findPWbyPhoneIntroduce"
            android:textColor="@color/textgury"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/phonePic"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/phone"/>
        <ImageView
            android:src="@drawable/right"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
         <ImageView
            android:src="@drawable/line"
            android:layout_below="@id/phoneIntroduce"
            android:layout_width="wrap_content"
             android:layout_margin="2dp"
            android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ByEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">
            <ImageView
                android:id="@+id/emailPic"
                android:src="@drawable/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/email"
                android:text="@string/findPWbyEmail"
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/emailPic"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/emailIntroduce"
                android:text="@string/findPWbyEmailIntroduce"
                android:textColor="@color/textgury"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/emailPic"
                android:layout_marginLeft="20dp"
                android:layout_below="@+id/email"/>
            <ImageView
                android:src="@drawable/right"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/otherway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/otherway"
                android:textColor="@color/textgury"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="wrap_content"
                android:layout_below="@+id/otherway">
                <TextView
                    android:layout_margin="10dp"
                    android:text="@string/Appeal"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:src="@drawable/right"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
